tests/tools/checker/negative/unknown_field_type.nv
struct Box {
    value: Missing;
}

fn main() : void {
    return;
}
